@@ -477,6 +477,11 @@ import Foundation
     case jetpackPluginConnectUserAccountFailed
     case jetpackPluginConnectUserAccountCompleted
 
+    // Domains Dashboard Card
+    case directDomainsPurchaseDashboardCardShown
+    case directDomainsPurchaseDashboardCardTapped
+    case directDomainsPurchaseDashboardCardHidden
+
     /// A String that represents the event
     var value: String {
         switch self {
@@ -1297,6 +1302,14 @@ import Foundation
             return "jetpack_plugin_connect_user_account_failed"
         case .jetpackPluginConnectUserAccountCompleted:
             return "jetpack_plugin_connect_user_account_completed"
+
+        // Domains Dashboard Card
+        case .directDomainsPurchaseDashboardCardShown:
+            return "direct_domains_purchase_dashboard_card_shown"
+        case .directDomainsPurchaseDashboardCardHidden:
+            return "direct_domains_purchase_dashboard_card_hidden"
+        case .directDomainsPurchaseDashboardCardTapped:
+            return "direct_domains_purchase_dashboard_card_tapped"
 
         } // END OF SWITCH
     }
