@@ -59,7 +59,8 @@ class BlogDashboardViewModel {
             case .cards(let cardModel):
                 let cellType = cardModel.cardType.cell
                 let cell = collectionView.dequeueReusableCell(withReuseIdentifier: cellType.defaultReuseID, for: indexPath)
-                if let cellConfigurable = cell as? BlogDashboardCardConfigurable {
+                if var cellConfigurable = cell as? BlogDashboardCardConfigurable {
+                    cellConfigurable.row = indexPath.row
                     cellConfigurable.configure(blog: blog, viewController: viewController, apiResponse: cardModel.apiResponse)
                 }
                 return cell
